--- a/CoreBuild/Packages/AndroidKeystoreSign/package.json
+++ b/CoreBuild/Packages/AndroidKeystoreSign/package.json
@@ -10,7 +10,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/frg-ivan/unity-package-multi-package-repo.git"
+		"url": "git+https://github.com/frg-ivan/mono-repo.git"
 	},
 	"scripts": {
 		"info": "echo %npm_package_name%@%npm_package_version%",
