--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: true
       matrix:
         projectPath:
-          - unity-core/mono-repo
+          - CoreBuild
         targetPlatform:
           - StandaloneWindows64 # Build a Windows 64-bit standalone.
     steps:
