--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -8,6 +8,22 @@ on:
       - '*@*'
 
 jobs:
+  requestManualActivationFile:
+    name: Request manual activation file 🔑
+    runs-on: ubuntu-latest
+    steps:
+      # Checkout repository
+      - uses: actions/checkout@v2
+
+      # Request manual activation file
+      - uses: game-ci/unity-request-activation-file@v2
+        id: getManualLicenseFile
+
+      # Upload artifact (Unity_v20XX.X.XXXX.alf)
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Manual Activation File
+          path: ${{ steps.getManualLicenseFile.outputs.filePath }}
   build-unity-core:
     name: Build for ${{ matrix.targetPlatform }}
     runs-on: ubuntu-latest
